tests/compile_fails/dissolve_path_syntax.rs
use dissolve_derive::Dissolve;

#[derive(Dissolve)]
#[dissolve = "something"]
struct PathSyntax {
    field: String,
}

fn main() {}
